--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
+    "@react-pdf/renderer": "^4.3.0",
     "bootstrap": "^5.3.7",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
