--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ecommerce",
-  "homepage": "https://cloutetech.github.io/ecommerce-demo/",
+  "homepage": "https://cloutetech.github.io/ecommerce-jutebag/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
